# langchain-forum

./: .gitignore  CLAUDE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_kr.md  README.md  README_kr.md  SCRIPTS_SUMMARY.md  package-lock.json  package.json  tsconfig.json  www_langchain_com_1309w_default.h2d
app/: .env.example  LANGSMITH_TRACING_COMPLETE.md  README.md  jest.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test-streaming.js  tsconfig.json  vitest.config.ts
app/.sisyphus/: ultrawork-state.json
app/app/: globals.css  layout.tsx
app/components/: navbar.tsx  theme-toggle.tsx
app/data/: README.md  STATS_EXAMPLE.md  forum-stats.json
app/docs/: PROJECT_ANALYSIS.md
app/lib/: mock-data.ts  real-forum-data.ts
app/scripts/: README-EMBEDDINGS.md  (+8 more)
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/chains/: __init__.py  rag_chain.py
backend/app/components/: __init__.py  evaluator.py  reranker.py  retriever.py
backend/app/loaders/: __init__.py  embedding_loader.py
backend/app/models/: __init__.py  schemas.py
backend/app/routes/: __init__.py  chat.py  evaluation.py
backend/tests/: __init__.py
data/: forum-parsed.json  forum-parsed.schema.json
docs/: FILE_MAP_kr.md  RAG_MANUAL.html  Senior Technical Support Engineer.md  Third-Interview.md  architecture_kr.md  protected-schemas_kr.md
forum/: README.md
scripts/: README.md  analyze-forum-data.ts  parse-forum-data.ts
templates/: rag-checklist_kr.md  self-check.md  self-check_kr.md  test-plan_kr.md
(+771 files in other folders)
